<resources>
    <string name="app_name" translatable="false">Project Velib</string>
    <string name="company_name" translatable="false">The Akatastroph\'</string>
    <string name="dummy_number" translatable="false">42</string>
    <string name="dummy_short" translatable="false">Dummy</string>
    <string name="dummy" translatable="false">Dummy Text</string>
    <string name="dummy_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin molestie sapien, ut semper neque condimentum id. Proin sit amet elit suscipit magna laoreet bibendum varius in ex.</string>
    <string name="hint_station_search">Search a station or address</string>
    <string name="back_button">Back</string>

    <string name="bike_stands_availables_content_desc">Bike stands availables</string>
    <string name="bike_availables_content_desc">Bike availables</string>
    <string name="dialog_message">If you want us to display station near you on the map when you open the app, please press allow on the next pop-up</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_permission_denied">You can change that later in the app settings</string>
    <string name="address_label">Address</string>
    <string name="last_update">Last update on %1$s at %2$s</string>
    <string name="status_label">Status</string>
    <string name="station_close">CLOSED</string>
    <string name="station_open">OPEN</string>
    <string name="bikes_main">BIKES</string>
    <string name="stands_main">STANDS</string>
    <string name="on_boarding_title_1">Welcome</string>
    <string name="on_boarding_description_1">You can see on the map screen the number of available bike in nearby Velib\' station. If you click on the stand button at the bottom of the screen, you will see the number of available stand in the nearby station instead.</string>
    <string name="on_boarding_title_2">Features</string>
    <string name="on_boarding_description_2">This application provides the following features:\n  \u2022 Nearby stations shown on the map\n  \u2022 Searchable list of all stations\n  \u2022 All informations on a specific station</string>
    <string name="on_boarding_title_3">Warning !</string>
    <string name="on_boarding_description_3">This is not the official app, Click &lt;a href="https://play.google.com/store/apps/details?id=com.paris.velib&amp;hl=en">here&lt;/a> for the official app</string>
    <string name="finish_tutorial">Let\'s go!</string>
    <string name="show_direction_button">Go</string>
    <string name="show_map_button">See on the map</string>
</resources>
