<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="#000000"
                android:text="@string/dummy_short"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_long"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/background_rounded_blue"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/background_rounded_blue_full"
                        android:src="@drawable/ic_directions_bike"
                        android:contentDescription="@string/bike_availables_content_desc" />

                    <TextView
                        android:id="@+id/available_bikes"
                        android:layout_margin="3dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue_bike"
                        android:text="@string/dummy_number" />

                </LinearLayout>
                <LinearLayout
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/background_rounded_purple"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/available_stands"
                        android:layout_margin="3dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_parking"
                        android:text="@string/dummy_number" />

                    <ImageView
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_rounded_purple_full"
                        android:src="@drawable/ic_local_parking"
                        android:contentDescription="@string/bike_stands_availables_content_desc" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>